    (Ming Ma via jlowe)

    MAPREDUCE-6360. TestMapreduceConfigFields is placed in wrong dir, 
    introducing compile error (Arshad Mohammad via vinayakumarb)

    MAPREDUCE-6361. NPE issue in shuffle caused by concurrent issue between
    copySucceeded() in one thread and copyFailed() in another thread on the
    same host. (Junping Du via ozawa)

Release 2.7.1 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    MAPREDUCE-6300. Task list sort by task id broken. (Siqi Li via aajisaka)

    MAPREDUCE-6238. MR2 can't run local jobs with -libjars command options
    which is a regression from MR1 (zxu via rkanter)

    MAPREDUCE-6324. Fixed MapReduce uber jobs to not fail the udpate of AM-RM
    tokens when they roll-over. (Jason Lowe via vinodkv)

    MAPREDUCE-6252. JobHistoryServer should not fail when encountering a 
    missing directory. (Craig Welch via devaraj)

    MAPREDUCE-6334. Fetcher#copyMapOutput is leaking usedMemory upon
    IOException during InMemoryMapOutput shuffle handler (Eric Payne via jlowe)

    MAPREDUCE-6339. Job history file is not flushed correctly because isTimerActive 
    flag is not set true when flushTimerTask is scheduled. (zhihai xu via devaraj)

    MAPREDUCE-6259. IllegalArgumentException due to missing job submit time
    (zhihai xu via jlowe)

    MAPREDUCE-6251. Added a new config for JobClient to retry JobStatus calls so
    that they don't fail on history-server backed by DFSes with not so strong
    guarantees. (Craig Welch via vinodkv)

Release 2.7.0 - 2015-04-20

  INCOMPATIBLE CHANGES

  NEW FEATURES

    MAPREDUCE-6227. DFSIO for truncate. (shv via yliu)

    MAPREDUCE-6228. Add truncate operation to SLive. (Plamen Jeliazkov via shv)

    MAPREDUCE-5583. Ability to limit running map and reduce tasks. 
    (Jason Lowe via junping_du)

  IMPROVEMENTS

    MAPREDUCE-6149. Document override log4j.properties in MR job.
    (Junping Du via harsh)
