@@ -419,6 +419,9 @@ Release 2.8.0 - UNRELEASED
     copySucceeded() in one thread and copyFailed() in another thread on the
     same host. (Junping Du via ozawa)
 
+    MAPREDUCE-6366. mapreduce.terasort.final.sync configuration in TeraSort
+    doesn't work. (Takuya Fukudome via ozawa)
+
 Release 2.7.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
